cmake_minimum_required(VERSION 3.30)
project(fiestatdci09)

set(CMAKE_CXX_STANDARD 23)

option(ENABLE_O3 "Build with O3" OFF)
option(ENABLE_NATIVE "Compile for this CPU" OFF)
option(ENABLE_SSE2 "Compile with SSE2" OFF)
option(ENABLE_AVX "Compile with AVX" OFF)
option(ENABLE_AVX512 "Compile with AVX512 - WIP" OFF)
option(NUM_THREADS "Computations run on n threads" 4)

if (ENABLE_O3)
     add_compile_options(-O3)
endif()
if (ENABLE_NATIVE)
    add_compile_options(-march=native)
endif()
if (ENABLE_SSE2)
    add_compile_options(-DUSE_SSE2)
endif()
if (ENABLE_AVX)
    add_compile_options(-DUSE_AVX)
endif()
if (ENABLE_AVX512)
    add_compile_options(-DUSE_AVX512)
endif()
add_compile_options(-DNUM_THREADS=${NUM_THREADS})

add_executable(fiestatdci09 main.cpp SerialInterface.cpp SerialInterface.h Fiesta.cpp Fiesta.h)
add_executable(fiestatdci09-randanalysis randanalysis.cpp seedkey.h)

install(TARGETS fiestatdci09 fiestatdci09-randanalysis DESTINATION bin)
